--- a/.github/workflows/update-bio.yml
+++ b/.github/workflows/update-bio.yml
@@ -3,6 +3,7 @@ name: Update GitHub Bio
 on:
   schedule:
     - cron: '0 0 * * *' # Runs daily at midnight UTC
+  workflow_dispatch: # Allows manual triggering
 
 jobs:
   update-bio:
