--- a/.github/workflows/update-bio.yml
+++ b/.github/workflows/update-bio.yml
@@ -3,15 +3,19 @@ name: Update GitHub Bio
 on:
   schedule:
     - cron: '0 0 * * *' # Runs daily at midnight UTC
+  workflow_dispatch: # Allows manual triggering
 
 jobs:
   update-bio:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
       - name: Update Bio
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
-          MESSAGE=$(shuf -n 1 messages.txt) # Pick a random message from messages.txt
+          MESSAGE=$(shuf -n 1 ./messages.txt) # Pick a random message from messages.txt
           curl -X PATCH -H "Authorization: token $GH_TOKEN" -H "Accept: application/vnd.github.v3+json" \
               https://api.github.com/user -d "{\"bio\":\"$MESSAGE\"}"
